fix string color in code blocks (dark mode)

--- a/src/app.css
+++ b/src/app.css
@@ -26,7 +26,7 @@
   --shiki-token-keyword: #ab4642;
   --shiki-token-parameter: #d8d8d8;
   --shiki-token-function: #7cafc2;
-  --shiki-token-string-expression: #465aa4;
+  --shiki-token-string-expression: #a1b56c;
   --shiki-token-punctuation: #d8d8d8;
 }
 
